--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,25 +1,28 @@
 <resources>
-    <string name="app_name">CicloComputer</string>
+    <string name="app_name">CicloComputador</string>
 
-    <string name="speed_label">Speed:</string>
-    <string name="avg_speed_label">AVG:</string>
-    <string name="max_speed_label">Max:</string>
-    <string name="distance_label">Distance:</string>
-    <string name="time_label">Elapsed time:</string>
+    <string name="navbar_route_label">Route</string>
+    <string name="navbar_map_label">Map</string>
+    <string name="navbar_historic_label">Historic</string>
+    <string name="navbar_config_label">Config</string>
 
-    <string name="speed_value">0.0 km/h</string>
-    <string name="avg_speed_value">0.0 km/h</string>
-    <string name="max_speed_value">0.0 km/h</string>
-    <string name="distance_value">0 m</string>
-    <string name="time_value">00:00:00.00</string>
-    <string name="lap_info">Lap</string>
+    <string name="speed_label">Speed</string>
+    <string name="avg_speed_label">AVG</string>
+    <string name="max_speed_label">Max</string>
+    <string name="time_label">Time</string>
+    <string name="distance_label">Distance</string>
 
+    <string name="speed_value_model">%02.1f Km/h</string>
+    <string name="avg_speed_value_model">%02.1f Km/h</string>
+    <string name="max_speed_value_model">%02.1f Km/h</string>
+    <string name="time_value_model">%02d:%02d:%02d.%02d</string>
+    <string name="distance_value_model">%02.1f Km</string>
 
-    <string name="start_button">Start</string>
-    <string name="pause_button">Pause</string>
-    <string name="lap_button">Lap</string>
-    <string name="save_button">Save</string>
-    <string name="restart_button">Restart</string>
+    <string name="speed_value_default">0.0 Km/h</string>
+    <string name="avg_speed_value_default">0.0 Km/h</string>
+    <string name="max_speed_value_default">0.0 Km/h</string>
+    <string name="time_value_default">00:00:00.00</string>
+    <string name="distance_value_default">0.0 Km</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
