--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="max_speed_label">Max</string>
     <string name="time_label">Time</string>
     <string name="distance_label">Distance</string>
+    <string name="lap_label">Lap</string>
 
     <string name="speed_value_model">%02.1f Km/h</string>
     <string name="avg_speed_value_model">%02.1f Km/h</string>
@@ -23,6 +24,7 @@
     <string name="max_speed_value_default">0.0 Km/h</string>
     <string name="time_value_default">00:00:00.00</string>
     <string name="distance_value_default">0.0 Km</string>
+    <string name="lap_value_default">0</string>
 
     <string name="main_meter_stop_label">Stop</string>
     <string name="main_meter_start_pause_label">StartAndPause</string>
